[package]
name = "ie_base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zerocopy = { version = "0.7.32", features = ["derive"] }
static_assertions = "1.1.0"
const-default = { version = "1.0", default-features = false, features = ["derive", "const-default-derive" ] }
bitfield = "0"
int-enum = { version = "0.5", default-features = false }
num = { version = "0.4", default-features = false, features = ["libm"] }

[dev-dependencies]
strum = { version = "0.25.0", features = ["derive", "strum_macros"] }
#
# [lints]
# workspace = true
