[package]
name = "micrortu_ie_base"
version.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
zerocopy = { workspace = true }
static_assertions = "1.1.0"
const-default = { version = "1.0", default-features = false, features = ["derive", "const-default-derive" ] }
bitfield = "0"
int-enum = { version = "0.5", default-features = false }
num = { version = "0.4", default-features = false, features = ["libm"] }

[dev-dependencies]
strum = { version = "0.25.0", features = ["derive", "strum_macros"] }

[lints]
workspace = true
