[package]
name = "micrortu_ie_base"
version.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
description.workspace = true

[features]
default = ["rkyv"]
rkyv = ["dep:rkyv", "dep:bytecheck"]

[dependencies]
zerocopy = { workspace = true }
static_assertions = "1.1.0"
const-default = { version = "1.0", default-features = false, features = ["derive", "const-default-derive" ] }
bitfield = "0"
int-enum = { version = "1.1.1", default-features = false }
num = { version = "0.4", default-features = false, features = ["libm"] }
rkyv = { version = "0.8.10", default-features = false, features = ["bytecheck", "little_endian"], optional = true }
bytecheck = { version = "0.8.1", optional = true }

[dev-dependencies]
strum = { version = "0.25.0", features = ["derive", "strum_macros"] }

[lints]
workspace = true
