[package]
name = "micrortu_ie_representation_derive"
version.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
description.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
# sqlx = { version = "0.7.3", features = ["sqlite"] }
syn = "2.0"

[lints]
workspace = true
