[package]
name = "micrortu_build_utils"
version.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
schemars = { version = "0.8.16", features = ["semver"] }
semver = { version = "1.0.22", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
validator = { version = "0.17.0", features = ["derive"] }
wasm_global_shared_data = { workspace = true }

[lints]
workspace = true
