[package]
name = "micrortu_wasm_global_shared_data"
version.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zerocopy = { workspace = true }
ie_base = { workspace = true }

[lints]
workspace = true
